--- a/Yingying/supporting files/Base.lproj/Main.storyboard
+++ b/Yingying/supporting files/Base.lproj/Main.storyboard
@@ -1141,6 +1141,9 @@
                                     <constraint firstAttribute="height" constant="25" id="i8l-VG-m7w"/>
                                 </constraints>
                                 <state key="normal" image="icon_map_leading.png"/>
+                                <connections>
+                                    <action selector="onLeading:" destination="nx3-74-qYa" eventType="touchUpInside" id="cJc-r5-JjE"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
